Stock plot chart with random numbers

--- a/GraphikView/Base.lproj/Main.storyboard
+++ b/GraphikView/Base.lproj/Main.storyboard
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4451" systemVersion="13A461" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3676"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="DDPViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z1L-A3-4RI"/>
+                        <viewControllerLayoutGuide type="bottom" id="oig-J1-qzt"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NBG-QB-Tdu" customClass="DDPGraphicView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oig-J1-qzt" firstAttribute="top" secondItem="NBG-QB-Tdu" secondAttribute="bottom" id="8Bp-s6-UCg"/>
+                            <constraint firstAttribute="trailing" secondItem="NBG-QB-Tdu" secondAttribute="trailing" id="Wrx-II-Lb2"/>
+                            <constraint firstItem="NBG-QB-Tdu" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="cnl-L9-IvK"/>
+                            <constraint firstItem="NBG-QB-Tdu" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="xZP-QE-cYK"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="graphView" destination="NBG-QB-Tdu" id="Whl-XP-cUG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
